--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: http://www.arachnidlabs.com
 title: Arachnid Labs
 subtitle: Makers of fine electronics since 2013
 author: Nick Johnson
-simple_search: http://google.com/search
+simple_search:
 description:
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
