Updated minimatrix video url in original post

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://www.arachnidlabs.com
+url: http://arachnidlabs.github.com
 title: Arachnid Labs
 subtitle: Makers of fine electronics since 2013
 author: Nick Johnson
